--- a/views/edit_user.ejs
+++ b/views/edit_user.ejs
@@ -99,6 +99,7 @@
         <div class="lish-boxes">
           <div class="recent-lish box">
             <% if (user) { %>
+              <!-- <% console.log(user) %> -->
               <div class="col-12 col-sm-auto mb-3">
                 <div class="mx-auto" style="width: 160px;">
                   <img src="../images/<%= user.profile_picture %>" width="150" height="150" class="rounded-circle" alt="">
@@ -113,7 +114,14 @@
                   <div class="tab-content pt-3">
                     <div class="tab-pane active">
                       <div class="mt-2">
-                        <button class="btn btn-primary edit-profile" type="button">
+                        <form action="/admin_updateprofilepicture" method="post" enctype="multipart/form-data">
+                          <input type="file" name="profile_picture" id="file" accept="image/*" />
+                          <input type="hidden" name="uid" value="<%= user.uid %>">
+                          <input type="hidden" name="username" value="<%= user.username %>">
+                          <input type="hidden" name="email" value="<%= user.email %>">
+                          <input type="hidden" name="display_name" value="<%= user.display_name %>">
+                          <br>
+                        <button type="submit" class="btn btn-primary edit-profile">
                           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                             class="bi bi-camera" viewBox="0 0 16 16">
                             <path
@@ -124,6 +132,7 @@
                           <span>Change Photo</span>
                         </button>
                       </div>
+                    </form>
                       <br>
                       <div class="tab-content pt-3">
                         <div class="tab-pane active">
