--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -81,7 +81,11 @@
       </p>
       <div class="profile-details">
         <% if (user) { %>
-          <img src="../images/<%= user.profile_picture %>" alt="">
+          <% if (user.profile_picture) { %>
+            <img src="../images/<%= user.profile_picture %>" alt="">
+          <% } else { %>
+            <img src="../images/chef.png" alt="">
+          <% } %>
           <span class="admin_name">
             <%= user.username %>
           </span>
@@ -121,7 +125,11 @@
                 </div>
                 <div class="col-lg-6">
                   <div class="about-avatar">
-                    <img src="../images/<%= user.profile_picture %>" title="" alt="">
+                    <% if (user.profile_picture) { %>
+                      <img src="../images/<%= user.profile_picture %>" title="" alt="">
+                    <% } else { %>
+                      <img src="../images/chef.png" title="" alt="">
+                    <% } %>
                   </div>
                 </div>
               </div>
