--- a/views/all_member.ejs
+++ b/views/all_member.ejs
@@ -81,7 +81,11 @@
       </p>
       <div class="profile-details">
         <% if (user) { %>
-          <img src="../images/<%= user.profile_picture %>" alt="">
+          <% if (user.profile_picture) { %>
+            <img src="../images/<%= user.profile_picture %>" alt="">
+          <% } else { %>
+            <img src="../images/chef.png" alt="">
+          <% } %>
           <span class="admin_name">
             <%= user.username %>
           </span>
@@ -116,7 +120,11 @@
                 <tr>
                   <td><%= user.uid %></td>
                   <td>
-                    <img src="../images/<%= user.profile_picture %>" alt="ผู้ใช้งาน">
+                    <% if (user.profile_picture) { %>
+                      <img src="../images/<%= user.profile_picture %>" alt="ผู้ใช้งาน">
+                    <% } else { %>
+                      <img src="../images/chef.png" alt="ผู้ใช้งาน">
+                    <% } %>
                   </td>
                   <td> <%= user.username %></td>
                   <td> <%= user.email %></td>
