--- a/views/post_board.ejs
+++ b/views/post_board.ejs
@@ -119,7 +119,7 @@
                     <textarea id="details" name="details" style="font-size: 15px;" placeholder="เนื้อหากระทู้"required></textarea>
                     <br>
                     <label for="post-image">รูปภาพ:</label>
-                    <input type="file"name="post_pic" accept="image/*">
+                    <input type="file" name="post_pic" accept=".jpg, .jpeg, .png, .gif, .bmp, .tiff, .tif, .webp, .svg">
                     <span>
                       <button class="post-button" type="submit">โพสต์</button>
                       <button class="cancel-button" type="submit" formmethod="get" formaction="/">ยกเลิก</button>
