--- a/views/show_post.ejs
+++ b/views/show_post.ejs
@@ -180,7 +180,7 @@
                           <textarea name="topic" id="topic" rows="5"
                             placeholder="เขียนความคิดเห็นของคุณ..."></textarea><br>
                           <label for="comment_pic">รูปภาพ:</label><br>
-                          <input type="file" id="comment_pic" name="comment_pic" accept="image/*">
+                          <input type="file" id="comment_pic" name="comment_pic" accept=".jpg, .jpeg, .png, .gif, .bmp, .tiff, .tif, .webp, .svg">
                           <input type="hidden" name="detail" value="null">
                           <input type="hidden" name="Posts_id" value="<%= showpost.id %>">
                           <input type="hidden" name="Posts_Users_uid" value="<%= showpost.Users_uid %>">
