--- a/views/edit_board.ejs
+++ b/views/edit_board.ejs
@@ -122,7 +122,7 @@
                         <br>
                         <input type="hidden" name="post_id" value="<%= post.id %>">
                         <label for="post-image">รูปภาพ:</label>
-                        <input type="file" name="post_pic" accept="image/*">
+                        <input type="file" name="post_pic" accept=".jpg, .jpeg, .png, .gif, .bmp, .tiff, .tif, .webp, .svg">
                         <span>
                           <button class="post-button" type="submit">โพสต์</button>
                           <button class="cancel-button" type="submit" formmethod="get" formaction="/">ยกเลิก</button>
