--- a/views/edit_comments.ejs
+++ b/views/edit_comments.ejs
@@ -121,7 +121,7 @@
                                         <input type="hidden" name="posts_id" value="<%= comment.Posts_id %>">
                                         <br>
                                         <label for="comment-image">Image:</label>
-                                        <input type="file"name="comment_pic" accept="image/*">
+                                        <input type="file" name="comment_pic" accept=".jpg, .jpeg, .png, .gif, .bmp, .tiff, .tif, .webp, .svg">
                                         <input type="hidden" name="Posts_Users_uid" value="<%= comment.Posts_Users_uid %>">
                                         <span>
                                             <button class="post-button" type="submit">Edit</button>
