--- a/views/edit_profile.ejs
+++ b/views/edit_profile.ejs
@@ -87,7 +87,11 @@
       </p>
       <div class="profile-details">
         <% if (user) { %>
-          <img src="../images/<%= user.profile_picture %>" alt="">
+          <% if (user.profile_picture) { %>
+            <img src="../images/<%= user.profile_picture %>" alt="">
+          <% } else { %>
+            <img src="../images/chef.png" alt="">
+          <% } %>
           <span class="admin_name">
             <%= user.username %>
           </span>
@@ -108,8 +112,11 @@
             <% if (user) { %>
               <div class="col-12 col-sm-auto mb-3">
                 <div class="mx-auto" style="width: 160px;">
-                  <img src="../images/<%= user.profile_picture %>" width="150" height="150" class="rounded-circle"
-                    alt="">
+                  <% if (user.profile_picture) { %>
+                    <img src="../images/<%= user.profile_picture %>" width="150" height="150" class="rounded-circle" alt="">
+                  <% } else { %>
+                    <img src="../images/chef.png" width="150" height="150" class="rounded-circle" alt="">
+                  <% } %>
                   <br>
                 </div>
               </div>
@@ -122,7 +129,7 @@
                     <div class="tab-pane active">
                       <div class="mt-2">
                         <form action="/update_profile" method="post" enctype="multipart/form-data">
-                          <input type="file" name="profile_picture" id="file" accept="image/*" />
+                          <input type="file" name="profile_picture" id="file" accept=".jpg, .jpeg, .png, .gif, .bmp, .tiff, .tif, .webp, .svg" />
                           <input type="hidden" name="uid" value="<%= user.uid %>">
                           <input type="hidden" name="username" value="<%= user.username %>">
                           <input type="hidden" name="email" value="<%= user.email %>">
