--- a/views/edit_board.ejs
+++ b/views/edit_board.ejs
@@ -87,7 +87,11 @@
       </p>
       <div class="profile-details">
         <% if (user) { %>
-          <img src="../images/<%= user.profile_picture %>" alt="">
+          <% if (user.profile_picture) { %>
+            <img src="../images/<%= user.profile_picture %>" alt="">
+          <% } else { %>
+            <img src="../images/chef.png" alt="">
+          <% } %>
           <span class="admin_name">
             <%= user.username %>
           </span>
@@ -118,7 +122,7 @@
                         <br>
                         <input type="hidden" name="post_id" value="<%= post.id %>">
                         <label for="post-image">รูปภาพ:</label>
-                        <input type="file" name="post_pic" accept="image/*">
+                        <input type="file" name="post_pic" accept=".jpg, .jpeg, .png, .gif, .bmp, .tiff, .tif, .webp, .svg">
                         <span>
                           <button class="post-button" type="submit">โพสต์</button>
                           <button class="cancel-button" type="submit" formmethod="get" formaction="/">ยกเลิก</button>
